[package]
name = "cqr"
version = "0.1.3"
edition = "2021"
authors = ["yinheli <me@yinheli.com>"]
keywords = ["qrcode", "cli"]
description = "Simple qr cli tool"
repository = "https://github.com/yinheli/cqr"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
image = "0.24.3"
quircs = "0.10.0"
anyhow = "1"
reqwest = { version = "0.11", features = [
  "rustls-tls",
  "blocking",
], default-features = false }

[profile.release]
opt-level = 'z'
lto = true
strip = true
codegen-units = 1
panic = 'abort'
