[package]
name = "cqr"
version = "0.1.4"
edition = "2021"
authors = ["yinheli <me@yinheli.com>"]
keywords = ["qrcode", "cli"]
description = "Simple qr cli tool"
repository = "https://github.com/yinheli/cqr"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.24.5"
quircs = "0.10.0"
anyhow = "1"
reqwest = { version = "0.11", features = [
  "rustls-tls",
  "blocking",
], default-features = false }

[profile.release]
opt-level = 'z'
lto = true
strip = true
codegen-units = 1
panic = 'abort'
